Update to Java 21

--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -10,5 +10,7 @@ on:
 jobs:
   update:
     uses: dfuchss/actions/.github/workflows/maven-update.yml@main
+    with:
+      auto-digit: "Patch"
     secrets:
       PAT: ${{ secrets.PAT }}
