--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fuchss</groupId>
         <artifactId>maven-parent</artifactId>
-        <version>0.21.41</version>
+        <version>0.22.0</version>
     </parent>
 
     <artifactId>matrix-bot-base</artifactId>
@@ -188,8 +188,8 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-            <id>mavenSnapshot</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+            <id>central-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
         </repository>
     </repositories>
     <build>
@@ -334,12 +334,13 @@
             <plugin>
                 <groupId>org.sonatype.central</groupId>
                 <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>0.7.0</version>
+                <version>${sonatype-publish.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <publishingServerId>central</publishingServerId>
                     <autoPublish>true</autoPublish>
                     <waitUntil>published</waitUntil>
+                    <deploymentName>matrix-bot-base</deploymentName>
                 </configuration>
             </plugin>
         </plugins>
